* spostato utility una directory sopra allo stesso livello di tree_visitor * aggiunto kwartzutility.rb

--- a/TODO.rdoc
+++ b/TODO.rdoc
@@ -1,5 +1,9 @@
 = TODO
 
+* completare test kwartz
+  fare il diff dell'output con file certificati
+  usare anche il codice ruby generato per vedere se funziona
+
 * provare a utilizzare gem install con l'opzione di test
   per vedere se i test funzionano
 
