--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2009-05-23
+
+* spostati i dati dei test in una directory indipendente
+* creata gem 0.0.4
+
 === 2009-05-18
 
 * convertito repository da subversion a git
