--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2009-05-25
+
+* spostate delle funzioni in file_utilites che si trovavano in ralbum-common
+* creata gem 0.0.5
+
 === 2009-05-23
 
 * spostati i dati dei test in una directory indipendente
@@ -10,28 +15,36 @@
 * creata la gem
 
 === 2007 09 09
-  aggiunto metodo invalidate a AbsNode
-  kwartz compilazione solo se necessario confrontando le date del file generato e quello dei template
+
+* aggiunto metodo invalidate a AbsNode
+* kwartz compilazione solo se necessario confrontando le date del file generato e quello dei template
 
 === 2007 09 06
-  Aggiunto il CallbackTreeNodeVisitor
+
+* Aggiunto il CallbackTreeNodeVisitor
 
 === 2007 08 31
-  rinominati molti file per renderli consistenti
-  se un file contiene la casse OneTwoThree il file si deve chiamare one_two_three.rb
+
+* rinominati molti file per renderli consistenti
+* se un file contiene la casse OneTwoThree il file si deve chiamare one_two_three.rb
 
 === 2007 08 30
-  aggiunte le gui fxruby e wxruby (preliminari)
+
+* aggiunte le gui fxruby e wxruby (preliminari)
 
 === 2007 08 25
-  cambiato il dirtreewalker in modo che utizzi gli stessi visitor del treenode
+
+* cambiato il dirtreewalker in modo che utizzi gli stessi visitor del treenode
 
 === 2007 08 24
-  aggiunto un visitor che rispetta la struttura del treenode
+
+* aggiunto un visitor che rispetta la struttura del treenode
 
 === 2007 08 19
-  spezzato il DirTreeProcessor in DirTreeWalker e DirTreeVisitor
-  aggiunto al TreeNode il Visitor
+
+* spezzato il DirTreeProcessor in DirTreeWalker e DirTreeVisitor
+* aggiunto al TreeNode il Visitor
 
 === 2007 08 17
-  aggiunto dirtreeprocessor
+
+* aggiunto dirtreeprocessor
