--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,40 @@
-= dirtree.rb / tree visitor lib
+= tree.rb / tree visitor library
 
-<pre>dirtree.rb</pre> is a 'clone' of tree unix command. 
-It is based on lib tree visitor.
++dirtree.rb+ is a 'clone' of tree unix command. It is based on lib tree visitor.
 
 Tree visitor is an implementation of visitor design pattern.
 
+ # $ tree.rb lib
+ # lib
+ #  |  | treevisitor.rb
+ #  |-treevisitor
+ #  |  | abs_node.rb
+ #  |  | dir_processor.rb
+ #  |  | dir_tree_walker.rb
+ #  |  | leaf_node.rb
+ #  |  | tree_node.rb
+ #  |  | tree_node_visitor.rb
+ #  |- |-cli
+ #  |- |    cli_tree.rb
+ #  |- |-visitors
+ #  |- |    print_node_visitor2.rb
+ #  |- |    build_dir_tree_visitor.rb
+ #  |- |    print_dir_tree_visitor.rb
+ #  |- |    block_tree_node_visitor.rb
+ #  |- |    flat_print_tree_node_visitors.rb
+ #  |- |    print_tree_node_visitor.rb
+ #  |- |    depth_tree_node_visitor.rb
+ #  |- |    clone_tree_node_visitor.rb
+ #  |- |    callback_tree_node_visitor.rb
+ #  |- |    callback_tree_node_visitor2.rb
+
 == REQUIREMENTS:
 
-* utilizza la libreria abstract di kwartz
+* require abstract gem
 
 == INSTALL:
 
-sudo gem install tree_visitor
-
-or
-
-sudo gem install gf-tree_visitor -s gems.github.com
+To install +sudo gem install treevisitor+ or +sudo gem install gf-treevisitor -s http://gems.github.com+
 
 == Copyright
 
