--- a/TODO.rdoc
+++ b/TODO.rdoc
@@ -1,11 +1,14 @@
 = TODO
 
-* kwartz non fuziona con ruby 1.9!!!
-* testare le funzioni dentro file_utilities - copy_dir aveva un errore!!!
+* kwartz non funziona con ruby 1.9!!! bisogna modificare una riga
+  aggiungere un warning quando si esegue la compialzioen
 
 * completare test kwartz
   fare il diff dell'output con file certificati
   usare anche il codice ruby generato per vedere se funziona
+
+* testare le funzioni dentro file_utilities - copy_dir aveva un errore!!!
+
 
 (ok) DirTreeWalker.add_ignore_dir deve prendere anche una regular expression
 (ok) provare a utilizzare gem install con l'opzione di test per vedere se i test funzionano
